# Sorts

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  sorts.cpp  try_a.cpp  try_b.cpp  try_benchmark.cpp  try_c.cpp  try_fs.cpp  try_read_TPCDS.cpp  try_read_dataset.cpp  try_sorts.cpp  utils.h
